# skylander-portal-controller

./: .env.dev.example  .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  PLAN_ARCHIVE.md  PLAY_TEST.md  README.md  SPEC.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
crates/core/: Cargo.toml
crates/core/src/: compat.rs  figure.rs  game.rs  lib.rs  portal.rs  protocol.rs
crates/e2e-tests/: Cargo.toml  README.md
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: connection_lost.rs  hmac.rs  live_integration.rs  live_lifecycle_switch.rs  multi_phone.rs  profiles.rs  regressions.rs  screenshot_tour.rs  shutdown.rs  smoke.rs  visual_debug_background.rs  visual_scroll_probes.rs  working_copies.rs
crates/indexer/: Cargo.toml
crates/indexer/src/: lib.rs
crates/indexer/tests/: real_pack.rs
crates/nfc-reader/: Cargo.toml
crates/nfc-reader/src/: lib.rs
crates/rpcs3-control/: Cargo.toml
crates/rpcs3-control/examples/: boot_game.rs  dump_menu_tree.rs  hide_dialog.rs  library_probe.rs  open_skylanders_dialog.rs  rpcs3_windows.rs  show_main.rs  stop_probe.rs  zorder_probe.rs
crates/rpcs3-control/src/: games_yaml.rs  hide.rs  lib.rs  mock.rs  process.rs  process_mock.rs  uia.rs
crates/rpcs3-control/tests/: live.rs  live_lifecycle.rs  process.rs
crates/server/: Cargo.toml  build.rs
crates/server/assets/: spike_index.html
crates/server/examples/: round_qr_spike.rs  vortex_shader_spike.rs
crates/server/migrations/: 20260415000001_profiles.sql  20260424000001_game_display_modes.sql  20260425000001_profile_kaos_toggle.sql
crates/server/src/: config.rs  display_mode.rs  embedded_assets.rs  fonts.rs  games.rs  http.rs  kaos.rs  lib.rs  logging.rs  main.rs  mdns.rs  nfc.rs  palette.rs  paths.rs  profiles.rs  round_qr.rs  sky_stats.rs  state.rs  ui.rs  vortex.rs  wizard.rs  working_copies.rs
crates/server/src/mdns/: win.rs
crates/server/src/ui/: crashed.rs  farewell.rs  in_game.rs  launch_phase.rs  loading.rs  main_screen.rs  mod.rs  sequencer.rs  server_error.rs
crates/server/src/vortex_presets/: idle.json
crates/server/tests/: profiles.rs
crates/sky-parser/: Cargo.toml  README.md
crates/sky-parser/examples/: validate_samples.rs
crates/sky-parser/src/: lib.rs
data/: LICENSE.md  figures.json  rekey-log.json
docs/: README.md  _config.yml  about.md  features.md  index.md  roadmap.md  setup.md  tour.md
docs/_includes/: head-custom.html
docs/_layouts/: home.html
docs/aesthetic/: README.md  design_language.md  desktop.ini  kaos_icon.datauri.txt  navigation.md
docs/aesthetic/mocks/: README.md  connection_lost.html  empty_states.html  figure_detail.html  game_picker.html  index.html  kaos_swap.html  kaos_takeover.html  menu_overlay.html  option_a_heraldic.html  option_b_arcane.html  option_c_modernized.html  pin_keypad.html  portal_with_box.html  profile_create.html  profile_manage.html  profile_picker.html  reset_confirm.html  resume_prompt.html  scan_import.html  screen_transitions.html  transitions.html  tv_launcher.html  tv_launcher_v2.html  tv_launcher_v3.html
docs/aesthetic/mocks/_contrast_pass/: figure_detail.html  game_picker.html  kaos_takeover.html  menu_overlay.html  option_a_heraldic.html  pin_keypad.html  portal_with_box.html  reset_confirm.html
docs/assets/: main.scss
docs/research/: README.md  firmware-inventory.json  firmware-inventory.md  game-launch-window-mgmt.md  rpcs3-control.md  stack-smoke.md  wiki-scrape.md
docs/website/: Gemfile  README.md  _config.yml  features.md  index.md  setup.md
phone/: Cargo.toml  Trunk.toml  build.rs  index.html
phone/assets/: app.css  manifest-dev.webmanifest  manifest.webmanifest
phone/src/: api.rs  dev_log.rs  lib.rs  model.rs  pwa.rs  ws.rs
phone/src/components/: action_button.rs  credits_overlay.rs  display_heading.rs  figure_hero.rs  framed_panel.rs  game_crash_screen.rs  gold_bezel.rs  kaos_overlay.rs  mod.rs  pairing_required.rs  pwa_hint.rs  ray_halo.rs  scan_overlay.rs  stale_version.rs  toy_box.rs
phone/src/screens/: browser.rs  connection_lost.rs  figure_detail.rs  game_picker.rs  header.rs  menu_overlay.rs  mod.rs  modals.rs  portal.rs  profile_picker.rs  toasts.rs
phone/styles/: base.css  input.css
phone/styles/components/: action_button.css  browser.css  connection_lost.css  credits_overlay.css  display_heading.css  figure_detail.css  figure_hero.css  framed_panel.css  game_crash_screen.css  game_picker.css  gold_bezel.css  header.css  kaos_overlay.css  menu_overlay.css  pairing_required.css  portal.css  profile_picker.css  pwa_hint.css  ray_halo.css  reset_confirm_modal.css  resume_modal.css  scan_overlay.css  stale_version.css  toasts.css  toy_box_lid.css
tools/icon-bake/: Cargo.toml
tools/icon-bake/src/: main.rs
tools/inventory/: Cargo.toml
tools/inventory/src/: main.rs
tools/ios-inspect/: Cargo.toml  README.md
tools/ios-inspect/src/: main.rs  protocol.rs  proxy.rs  simulator.rs  state.rs
tools/nfc-dump/: Cargo.toml
tools/nfc-dump/src/: main.rs
tools/phone-smoke/: Cargo.toml  index.html
tools/phone-smoke/src/: lib.rs
tools/rekey-figure-ids/: Cargo.toml
tools/rekey-figure-ids/src/: main.rs
tools/tailwind-build/: Cargo.toml
tools/tailwind-build/src/: main.rs
tools/uia-drive/: Cargo.toml
tools/uia-drive/src/: main.rs
tools/uia-probe/: Cargo.toml
tools/uia-probe/src/: main.rs
tools/wiki-scrape/: Cargo.toml  README.md
tools/wiki-scrape/src/: main.rs
