[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/indexer",
    "crates/rpcs3-control",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Shared across multiple crates. Version bumps happen here.
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
walkdir = "2"
