[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/indexer",
    "crates/rpcs3-control",
    "crates/server",
    "crates/sky-parser",
    "crates/e2e-tests",
    "tools/icon-bake",
    "tools/wiki-scrape",
]
# Bare cargo commands from the repo root narrow to just the server, which
# has one bin (`skylander-portal-controller`). Without this, `cargo run`
# errors on bin-ambiguity vs the one-shot `skylander-wiki-scrape` tool.
# Note this also affects `cargo test` / `cargo build` / `cargo check` —
# use `--workspace` (or `-p <name>`) when you need the rest of the
# workspace. Wiki-scrape stays reachable via `cargo run -p skylander-wiki-scrape`.
default-members = ["crates/server"]

[workspace.package]
version = "0.1.0"
edition = "2024"
publish = false

[workspace.dependencies]
# Shared across multiple crates. Version bumps happen here.
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
sha2 = "0.10"
walkdir = "2"
