# Standalone crate — intentionally NOT part of the root Cargo workspace so
# trunk's wasm target doesn't fight with the server's win-x64 builds.
# Build with: `cd phone && trunk build`
[workspace]

[package]
name = "skylander-portal-phone"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
# `cdylib` is what trunk emits to wasm; `rlib` is added so pure-Rust
# modules (e.g. `dev_log::DevLogBuffer`) can be exercised by native
# `cargo test` without needing a wasm-bindgen-test runtime.
crate-type = ["cdylib", "rlib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = [
    "WebSocket", "MessageEvent", "Event", "BinaryType", "console",
    "Window", "Location", "Request", "RequestInit", "RequestMode",
    "Response", "Headers", "PointerEvent", "Element", "HtmlElement",
] }
console_error_panic_hook = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Matches the server's command-signing scheme (3.13). Phone reads the key
# from `window.location.hash` (embedded in the TV's QR code) and signs every
# mutating REST call.
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
