[package]
name = "skylander-e2e-tests"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
fantoccini = "0.21"
tokio = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = "3"
which = "6"
once_cell = "1"
tracing = { workspace = true }

# HMAC negative-test needs to craft signatures directly.
hmac = "0.12"
sha2 = { workspace = true }
hex = "0.4"
tokio-tungstenite = "0.24"
futures-util = "0.3"
