[package]
name = "skylander-indexer"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
skylander-core = { path = "../core" }
skylander-sky-parser = { path = "../sky-parser" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sha2 = { workspace = true }
walkdir = { workspace = true }
tracing = { workspace = true }
