[package]
name = "skylander-rpcs3-control"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
skylander-core = { path = "../core" }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[target.'cfg(windows)'.dependencies]
uiautomation = "0.20"
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_Graphics_Gdi",
] }

[features]
default = []
mock = []
