[package]
name = "skylander-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "skylander_server"
path = "src/lib.rs"

[[bin]]
name = "skylander-portal-controller"
path = "src/main.rs"

[dependencies]
skylander-core = { path = "../core" }
skylander-indexer = { path = "../indexer" }
skylander-rpcs3-control = { path = "../rpcs3-control" }
skylander-sky-parser = { path = "../sky-parser", optional = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

axum = { version = "0.7", features = ["ws"] }
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
futures-util = "0.3"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
local-ip-address = "0.6"
# mDNS advertisement uses the Windows native DnsServiceRegister API
# (see crates/server/src/mdns.rs). Why not a cross-platform Rust crate
# (mdns-sd, etc.): on Windows ≥10, the OS owns the mDNS responder and
# third-party advertisers send packets that Windows's resolver doesn't
# propagate to local lookups (iPhone-side resolution silently fails
# even though the daemon reports register-success). Going through
# DnsServiceRegister registers with the OS responder — same path
# Windows uses for printer/Bonjour discovery — and the records actually
# resolve. PLAN 4.18.1a / 4.19.10b. Project is Windows-only (PLAN
# Phase 7), so a portable shim isn't needed.

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HMAC command signing (3.13): random key at startup, key embedded in QR
# fragment, phone signs every mutating request.
hmac = "0.12"
sha2 = { workspace = true }
subtle = "2"  # constant-time tag compare
hex = "0.4"

# First-launch wizard (3.16): native file pickers + APPDATA resolution + .sky recursion.
rfd = "0.14"
directories = "5"
walkdir = { workspace = true }
thiserror = { workspace = true }

# GetComputerNameExW for mDNS hostname discovery — see crates/server/src/mdns.rs.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
] }

[dev-dependencies]
tempfile = "3"
# `util` brings `ServiceExt::oneshot`, used by axum-handler unit tests
# (e.g. dev_log handler) to drive a router without spinning up a server.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"

[features]
default = ["dev-tools"]
# Relaxes behavior for development: reads .env.dev, logs to ./logs/,
# accepts SKYLANDER_PORTAL_DRIVER=mock, allows insecure helpers, etc.
dev-tools = ["skylander-rpcs3-control/mock"]
# Enables the /api/_test/* endpoints used by the e2e harness to inject
# mock-driver failure outcomes. Requires dev-tools and implicitly forces
# the mock driver. Never enable in release builds.
test-hooks = ["dev-tools"]
# Parses `.sky` working copies and exposes a per-figure stats endpoint at
# `GET /api/profiles/:profile_id/figures/:figure_id/stats`. Gated while
# the parser's decrypt path matures — see `crates/sky-parser/README.md`.
sky-stats = ["dep:skylander-sky-parser"]
