[package]
name = "skylander-server"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "skylander_server"
path = "src/lib.rs"

[[bin]]
name = "skylander-portal-controller"
path = "src/main.rs"

[dependencies]
skylander-core = { path = "../core" }
skylander-indexer = { path = "../indexer" }
skylander-rpcs3-control = { path = "../rpcs3-control" }
skylander-sky-parser = { path = "../sky-parser", optional = true }
skylander-nfc-reader = { path = "../nfc-reader", optional = true }

anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = "0.2"
serde = { workspace = true }
serde_json = { workspace = true }

axum = { version = "0.7", features = ["ws"] }
async-trait = "0.1"
tower = "0.5"
tower-http = { version = "0.6", features = ["fs", "trace", "set-header"] }
futures-util = "0.3"
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
# Direct GL access for the vortex fragment shader (PLAN 4.19.6). eframe
# pulls these in transitively for the glow backend, but we depend on
# them explicitly so we can build a `ShaderRig` + `egui::PaintCallback`
# in `vortex.rs`. Originally dev-deps for the spike at
# `examples/vortex_shader_spike.rs`; promoted to runtime once the spike
# graduated.
egui_glow = "0.29"
glow = "0.14"
qrcode = "0.14"
image = { version = "0.25", default-features = false, features = ["png"] }
local-ip-address = "0.6"
# mDNS advertisement uses the Windows native DnsServiceRegister API
# (see crates/server/src/mdns.rs). Why not a cross-platform Rust crate
# (mdns-sd, etc.): on Windows ≥10, the OS owns the mDNS responder and
# third-party advertisers send packets that Windows's resolver doesn't
# propagate to local lookups (iPhone-side resolution silently fails
# even though the daemon reports register-success). Going through
# DnsServiceRegister registers with the OS responder — same path
# Windows uses for printer/Bonjour discovery — and the records actually
# resolve. PLAN 4.18.1a / 4.19.10b. Project is Windows-only (PLAN
# Phase 7), so a portable shim isn't needed.

sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "migrate", "macros", "chrono"] }
argon2 = "0.5"
rand_core = { version = "0.6", features = ["std"] }
ulid = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }

# HMAC command signing (3.13): random key at startup, key embedded in QR
# fragment, phone signs every mutating request.
hmac = "0.12"
sha2 = { workspace = true }
subtle = "2"  # constant-time tag compare
hex = "0.4"

# First-launch wizard (3.16): native file pickers + APPDATA resolution + .sky recursion.
rfd = "0.14"
directories = "5"
walkdir = { workspace = true }
thiserror = { workspace = true }
# Embeds the trunk-built phone bundle into the release exe. With the
# `debug-embed` feature OFF (the default), debug builds read the
# files from disk on every request — so `trunk serve --watch` still
# iterates without needing a server restart. Release builds bake the
# bundle into the binary (PLAN 7.1).
rust-embed = "8"

# `raw-window-handle` is needed to extract the HWND from eframe's
# `Frame::window_handle()` for the Win32 SetWindowPos call below.
# Top-level dep so the import compiles on non-Windows too (the
# Windows-specific call is gated by `#[cfg(windows)]`).
raw-window-handle = "0.6"

# Win32 surface area:
#   - GetComputerNameExW for mDNS hostname discovery (see mdns.rs).
#   - SetWindowPos for re-asserting always-on-top each frame, since
#     egui/winit's WindowLevel command isn't aggressive enough to
#     beat Win32 menus + dropdowns that activate after us — see
#     `ui/mod.rs::update()` always-on-top section.
[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_SystemInformation",
    "Win32_UI_WindowsAndMessaging",
] }

[dev-dependencies]
tempfile = "3"
# `util` brings `ServiceExt::oneshot`, used by axum-handler unit tests
# (e.g. dev_log handler) to drive a router without spinning up a server.
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
# (egui_glow + glow promoted to runtime deps above for the production
# vortex shader; spike uses the same crates.)

[features]
default = ["dev-tools", "sky-stats"]
# Relaxes behavior for development: reads .env.dev, logs to ./logs/,
# accepts SKYLANDER_PORTAL_DRIVER=mock, allows insecure helpers, etc.
dev-tools = ["skylander-rpcs3-control/mock"]
# Enables the /api/_test/* endpoints used by the e2e harness to inject
# mock-driver failure outcomes. Requires dev-tools and implicitly forces
# the mock driver. Never enable in release builds.
test-hooks = ["dev-tools"]
# Parses `.sky` working copies and exposes a per-figure stats endpoint at
# `GET /api/profiles/:profile_id/figures/:figure_id/stats`. Gated while
# the parser's decrypt path matures — see `crates/sky-parser/README.md`.
sky-stats = ["dep:skylander-sky-parser"]
# Spawns a background NFC scanner worker that watches an ACR122U (or any
# compatible PC/SC reader) and imports scanned figures into the shared
# toy-box library. Off by default so users without the hardware don't
# pull in pcsc-lite / winscard linkage. PLAN 6.5. Needs the ACS Unified
# CCID Driver on macOS; see `crates/nfc-reader/src/lib.rs` for details.
# Implies `sky-stats`: the feature uses sky-parser at startup to build
# the tag-identity map for pack-vs-scan dedup (PLAN 6.5.5a).
nfc-import = ["dep:skylander-nfc-reader", "sky-stats"]
