[package]
name = "skylander-sky-parser"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "skylander_sky_parser"
path = "src/lib.rs"

[dependencies]
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }

[dev-dependencies]
serde_json = { workspace = true }
