[package]
name = "skylander-sky-parser"
version.workspace = true
edition.workspace = true
publish.workspace = true

[lib]
name = "skylander_sky_parser"
path = "src/lib.rs"

[dependencies]
skylander-core = { path = "../core" }
serde = { workspace = true }
thiserror = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["serde", "alloc"] }
aes = "0.8"
md-5 = "0.10"

[dev-dependencies]
serde_json = { workspace = true }
