[package]
name = "skylander-icon-bake"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "skylander-icon-bake"
path = "src/main.rs"

# One-shot tool. Rasterises phone/assets/icon{,-dev}.svg into PNGs at the
# sizes browsers + iOS PWAs + Android adaptive icons need. Output is
# committed to the repo so trunk doesn't need to rebake on every build —
# re-run `cargo run -p skylander-icon-bake` after editing the SVGs.

[dependencies]
anyhow = { workspace = true }
resvg = "0.43"
