[package]
name = "skylander-nfc-dump"
version.workspace = true
edition.workspace = true
publish.workspace = true

[[bin]]
name = "skylander-nfc-dump"
path = "src/main.rs"

# PLAN 6.5.0 spike: prove we can dump a Skylanders figure end-to-end through
# an ACS ACR122U (or any PC/SC reader that speaks the ACR122U-style direct-
# transmit APDUs). Cross-platform via `pcsc` — ships against pcsc-lite on
# macOS/Linux and winscard.dll on Windows. Developed on macOS.

[dependencies]
anyhow = { workspace = true }
pcsc = "2"
skylander-sky-parser = { path = "../../crates/sky-parser" }
