# Standalone crate — intentionally NOT part of the root Cargo workspace.
# Build with: `cd tools/phone-smoke && trunk build`
[workspace]

[package]
name = "phone-smoke"
version = "0.0.1"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = ["WebSocket", "MessageEvent", "Event", "BinaryType", "console"] }
console_error_panic_hook = "0.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
