# Standalone tool — intentionally NOT part of the root Cargo workspace.
# Run with: `cargo run --manifest-path tools/uia-probe/Cargo.toml -- <window title>`
[workspace]

[package]
name = "uia-probe"
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
uiautomation = "0.20"
anyhow = "1"
